--- a/css/main.css
+++ b/css/main.css
@@ -2,38 +2,46 @@
   display: none;
 }
 
-body h1{
-  text-align: center;
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
-#container {
-  width: 100%;
+#wrapper {
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: #ededed;
+  height: 100%;
+}
+
+#wrapper h2 {
   text-align: center;
+  font-size: 34px;
+  padding: 20px 0 10px 0;
 }
 
 #dropZone {
-  width: 65%;
+  background-image: url("../images/scene_background.jpg");
+  width: 1237px;
   height: 480px;
   margin: 0 auto;
   border: solid 2px #000;
 }
 
 #birdsContainer {
-  width: 50%;
-  height: 200px;
+  width: 1237px;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .icons {
   width: 100px;
   height: 100px;
-  border: solid 2px #ddd;
+  border: solid 2px #000;
   border-radius: 5px;
 }
