--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 #wrapper {
   max-width: 1600px;
   margin: 0 auto;
-  background-color: #ededed;
+  background-color: #333333;
   height: 100%;
 }
 
@@ -20,12 +20,26 @@ body {
   padding: 20px 0 10px 0;
 }
 
-#dropZone {
-  background-image: url("../images/scene_background.jpg");
+
+
+	
+
+
+
+#environment {
+  display:block;
   width: 1237px;
   height: 480px;
   margin: 0 auto;
   border: solid 2px #000;
+	background:transparent url(../images/env_loop2.png) 0 0 no-repeat;
+	
+	animation: env_loop .75s steps(6) infinite;
+}
+
+@keyframes env_loop {
+	0%{background-position: 0 0;}
+	100%{background-position: 0 -2880px;}
 }
 
 #birdsContainer {
@@ -39,7 +53,7 @@ body {
   justify-content: space-evenly;
 }
 
-.icons {
+.birdIcon {
   width: 100px;
   height: 100px;
   border: solid 2px #000;
