--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,21 @@ header, #environment, #birdContainer {
  border-radius: 5px;
  width: 250px;
  padding-left: 5px;
+ display: flex;
+ justify-content: space-evenly;
  
 }
 #fxContainer button img {
   width: 50px;
+}
+
+#fxContainer a {
+  text-decoration: none;
+  display: flex;
+}
+
+#fxContainer img {
+  width: 35px;
 }
 
 #environment {
