--- a/css/main.css
+++ b/css/main.css
@@ -7,19 +7,24 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #333333;
 }
 
 
 #wrapper {
   max-width: 1600px;
   margin: 0 auto;
+  padding-top: 20px;
   background-color: #333333;
   height: 100%;
 }
 
 #wrapper h2 {
   text-align: center;
-  font-size: 34px;
+  color: rgb(241, 241, 241);
+  font-size: 54px;
+  font-family: 'Bangers', cursive;
+  letter-spacing: 5px;
   padding-top: 10px;
 }
 
